# ananke-py

./: .flake8  .gitignore  GNUmakefile  Makefile  README.md  build.sh  flake.nix  pyproject.toml  run.py  scripts.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml
ananke/: __main__.py  app.py  cli.py  codec.py  config.py  io.py
ananke/application/: __init__.py  common.py  json.py  sqlite.py  text.py
ananke/cipher/: __init__.py  common.py  gpg.py
ananke/codec/: __init__.py  common.py  gpg_codec.py
ananke/data/: __init__.py  common.py  core.py  entry.py  migration.py  schema.py  secure_entry.py
ananke/store/: __init__.py  armored_file_store.py  in_memory_store.py  sqlite_store.py  store.py
example/: ananke.ini
example/db/: data.json  data.sql
tartarus/: CLI.py  Data.py  GPG.py  __main__.py  app.py  cli.py  config.py  data.py  gpg.py
tartarus/codec/: __init__.py  abstract_codec.py  gpg_codec.py
tartarus/data/: __init__.py  entry.py
tartarus/store/: __init__.py  abstract_store.py  in_memory_store.py  store.py
tests/: __init__.py  basic.t  common.py  setup.sh  test_app.py  test_app_json.py  test_app_sqlite.py  test_application.py  test_cli.py  test_config.py  test_data.py  test_doctest.py  test_gpg.py  test_gpg_codec.py  test_in_memory_store.py  test_migration.py  test_sqlite_store.py
