[build-system]
requires = ["setuptools>=52.0"]         # debian bullseye version
build-backend = "setuptools.build_meta"

[project]
name = "tartarus"
version = "0.1.0"
description = ""
authors = [{ name = "Henry Till", email = "henrytill@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["flake8>=6.0.0", "black>=23.3.0", "pylint>=2.17"]
test = ["coverage>=5.1"]

[project.scripts]
tartarus = "tartarus.__main__:main"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
known_first_party = ["tartarus"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0301", # line-too-long, we use black for formatting
    "C0414", # useless-import-alias, we use aliases for type checking
]
