[build-system]
requires = ["setuptools>=52.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tartarus"
dynamic = ["version"]
description = ""
authors = [{ name = "Henry Till", email = "henrytill@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["flake8>=5.0.4", "black>=23.1.0", "pylint>=2.16.2"]
test = ["coverage>=6.5.0"]

[project.scripts]
tartarus = "tartarus.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "tartarus.version.__version__" }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["tartarus"]

[tool.pylint]
max-line-length = 120
disable = [
    "C0301", # line-too-long, we use black for formatting
    "C0414", # useless-import-alias, we use aliases for type checking
]
