[build-system]
requires = ["setuptools>=52.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ananke"
dynamic = ["version"]
description = ""
authors = [{ name = "Henry Till", email = "henrytill@gmail.com" }]
license = { file = "COPYING" }
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["black>=23.1.0", "flake8>=5.0.4", "isort>=5.13.2", "mypy>=1.8.0", "pylint>=3.3.4"]
test = ["coverage>=6.5.0", "cram>=0.7"]

[project.scripts]
ananke-py = "ananke.__main__:main"

[tool.setuptools]
packages = ["ananke", "ananke.application", "ananke.cipher", "ananke.data"]

[tool.setuptools.dynamic]
version = { attr = "ananke.version.__version__" }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["ananke"]
line_length = 120

[tool.mypy]
strict = true
check_untyped_defs = true
warn_redundant_casts = false

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # missing-module-docstring, too much
    "C0115", # missing-class-docstring, too much
    "C0301", # line-too-long, we use black for formatting
    "C0414", # useless-import-alias, we use aliases for type checking
    "R0801", # duplicate-code, no thanks
    "R0903", # too-few-public-methods, come on
    "R0913", # too-many-arguments, i know
    "R0917", # too-many-positional-arguments, you already told me thanks
    "W2301", # unnecessary-ellipsis, yes but i want them
]

[tool.pyright]
strict = ["ananke", "tests"]
